# hiram-dashboard

./: README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  sqlite.db  streamlit_app.py  tables-creation.sql
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/portfolios/: model.py  repository.py  router.py  service.py
backend/app/pricer/: model.py  router.py  service.py
backend/app/stocks/: model.py  repository.py  router.py  schema.py  service.py  utils.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/components/ui/Header/: Header.module.css  Header.tsx
frontend/src/data/: series.ts
frontend/src/layouts/: Layout.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/pages/About/: About.module.css  About.tsx
frontend/src/pages/Home/: Home.tsx  HomePage.tsx
frontend/src/pages/Portfolio/: Portfolio.module.css  Portfolio.tsx
frontend/src/pages/Pricer/: Pricer.tsx
frontend/src/pages/Stock/: Stock.tsx
pages/: 1_equity_dashboard.py  2_option_pricer.py
